--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,9 @@ StyleCopReport.xml
 *.pgc
 *.pgd
 *.rsp
+*.sln
+*.vcxproj
+*.vcxproj.filters
 # but not Directory.Build.rsp, as it configures directory-level build defaults
 !Directory.Build.rsp
 *.sbr
